--- a/ewaste/ewasteapp/templates/base.html
+++ b/ewaste/ewasteapp/templates/base.html
@@ -71,7 +71,9 @@
                   <li class="nav-link pickup"  > User: {{fname}}
                 
                   </li>
-                  
+                  <li class="nav-link pickup"  > Address: {{address}}
+                
+                </li>
                   {%else%}
                   <li class="nav-item">
                     <a class="nav-link pickup" href="{% url 'login' %}"> Customer Log-In</a>
