--- a/ewaste/ewasteapp/templates/signup.html
+++ b/ewaste/ewasteapp/templates/signup.html
@@ -24,64 +24,21 @@
     </div>
 {% endfor %}
 <h1>Sign Up For an Account</h1>
-  <form action ="/signup/" method = "post">
-  {% csrf_token %}
-      <div class="mb-3 row">
-          <label for="" class="col-sm-2 col-form-label">Username</label>
-          
-          <div class="col-sm-10">
-              <input type="text" class="form-control" id="username" name = "username" placeholder="Create a username" Required>
-          </div>
-      </div>
-
-      <div class="mb-3 row">
-        <label for="" class="col-sm-2 col-form-label">First Name</label>
-        
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="fname" name = "fname" placeholder="Enter your first name" Required>
-        </div>
-    </div>
-
+  
+<form action="" method="post">
+  {% csrf_token %}    
+    
+    {% for field in form %}
     <div class="mb-3 row">
-      <label for="" class="col-sm-2 col-form-label">Last Name</label>
+      <label for="" class="col-sm-2 col-form-label">{{ field.label_tag }}</label>
       
       <div class="col-sm-10">
-          <input type="text" class="form-control" id="lname" name = "lname" placeholder="Enter your last name" Required>
-      </div>
-    </div>
-
-    <div class="mb-3 row">
-        <label for="" class="col-sm-2 col-form-label">Email Address</label>
-        
-        <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" name = "email" placeholder="name@example.com" Required>
-        </div>
-    </div>
-    <div class="mb-3 row">
-      <label for="" class="col-sm-2 col-form-label">Street Address</label>
-      
-      <div class="col-sm-10">
-          <input type="text" class="form-control" id="address" name = "address" placeholder="Enter your street address" Required>
+        {{ field }}
       </div>
   </div>
-    <div class="mb-3 row">
-      <label for="" class="col-sm-2 col-form-label">Password</label>
-      
-      <div class="col-sm-10">
-          <input type="password" class="form-control" id="pass1" name = "pass1" placeholder="Enter a password" Required>
-      </div>
-    </div>
-
-    <div class="mb-3 row">
-        <label for="" class="col-sm-2 col-form-label">Confirm Password</label>
-        
-        <div class="col-sm-10">
-            <input type="password" class="form-control" id="pass2" name = "pass2" placeholder="Confirm your password " Required>
-        </div>
-    </div>
-    <button type = "submit">Sign Up</button>
+  {% endfor %}
+  <button type = "submit">Sign Up</button>
 </form>
-
 {% endblock %}
 </body>
 </html>
