--- a/ewaste/ewasteapp/templates/base.html
+++ b/ewaste/ewasteapp/templates/base.html
@@ -68,12 +68,9 @@
                 
                   </li>
                   {% if user.is_authenticated %}
-                  <li class="nav-link pickup"  > User: {{fname}}
+                  <li class="nav-link pickup"  > User: {{user.user_name}}
                 
                   </li>
-                  <li class="nav-link pickup"  > Address: {{address}}
-                
-                </li>
                   {%else%}
                   <li class="nav-item">
                     <a class="nav-link pickup" href="{% url 'login' %}"> Customer Log-In</a>
