--- a/ewaste/ewasteapp/templates/login.html
+++ b/ewaste/ewasteapp/templates/login.html
@@ -23,27 +23,21 @@
   </button>
     </div>
 {% endfor %}
-  <form action ="/login/" method = "post">
-    {% csrf_token %}
-        <div class="mb-3 row">
-            <label for="" class="col-sm-2 col-form-label">Username</label>
-            
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="username" name = "username" placeholder="Create a username" Required>
-            </div>
-        </div>
-  
-        <div class="mb-3 row">
-          <label for="" class="col-sm-2 col-form-label">Password</label>
-          
-          <div class="col-sm-10">
-              <input type="password" class="form-control" id="pass1" name = "pass1" placeholder="Enter your password" Required>
-          </div>
+<h1> Log In</h1>
+<form action="" method="post">
+  {% csrf_token %}    
+    
+    {% for field in form %}
+    <div class="mb-3 row">
+      <label for="" class="col-sm-2 col-form-label">{{ field.label_tag }}</label>
+      
+      <div class="col-sm-10">
+        {{ field }}
       </div>
-      <button type = "submit">LogIn</button>
-
-    </form>
-
+  </div>
+  {% endfor %}
+  <button type = "submit">Log In</button>
+</form>
 {% endblock %}
 </Body>
 </html>
