--- a/ewaste/ewasteapp/templates/base.html
+++ b/ewaste/ewasteapp/templates/base.html
@@ -78,11 +78,12 @@
                   <li class="nav-item">
                     <a class="nav-link pickup" href="{% url 'login' %}"> Customer Log-In</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link pickup" href="{% url 'driverlogin' %}"> Driver Log-In</a>
-                </li>   
+                
                 <li class="nav-item">
                     <a class="nav-link pickup" href="{% url 'signup' %}"> SignUp</a>
+                </li>   
+                <li class="nav-item">
+                    <a class="nav-link pickup" href="{% url 'driversignup' %}"> Driver SignUp</a>
                 </li>   
                 {% endif %}
         
