--- a/ewaste/ewasteapp/templates/pickup.html
+++ b/ewaste/ewasteapp/templates/pickup.html
@@ -12,9 +12,18 @@
     <div class="form-group"></div>
     
 
-    <form class="form-select d-inline-block" action="" method="post">{% csrf_token %}
-       
-        {{ form.as_p }}
+    <form class="form-select d-inline-block" action="" method="post">
+        {% csrf_token %}
+        {% for field in form %}
+            <div class="mb-3 row">
+            <label for="" class="col-sm-2 col-form-label">{{ field.label_tag }}</label>
+            
+            <div class="col-sm-10">
+                {{ field }}
+            </div>
+        </div>
+        {% endfor %}
+
         <input type="submit" value="Create" />
         <p></p>
     </form>
