--- a/ewaste/ewasteapp/static/style.css
+++ b/ewaste/ewasteapp/static/style.css
@@ -6,6 +6,14 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+body{
+    height: 100vh;
+}
+.format{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .logo{
     width: 169.8px; 
     height: 57.15px;
@@ -17,4 +25,12 @@
     font-weight: normal;
     font-size: 25px;
     color: black;
+    float: right;
+}
+.container{
+    position:relative;
+    max-width:  500px;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1)
 }
