--- a/ewaste/ewasteapp/templates/base.html
+++ b/ewaste/ewasteapp/templates/base.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <!-- header code -->
-        <nav class="navbar navbar-expand-lg navbar-expand-sm  container-fluid-nav ">
+        <nav class="navbar navbar-expand-lg navbar-expand-sm  container-fluid-nav " style = "background-color: #e3f2fd;">
             <ul class="navbar-nav " >
                 <li >
                     
