--- a/ewaste/ewasteapp/templates/login.html
+++ b/ewaste/ewasteapp/templates/login.html
@@ -1,20 +1,8 @@
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <style>
-  form{
-    padding: 25px 100px ;
-  }
-  h1{
-    text-align: center;
-  }
-</style>
-</head>
 {% extends "base.html" %}
-<Body style = "text-align: center;">
+<body>
+  
   {% block content %}
+<div class = "format align-middle">
   {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
         <strong>Message:</strong> {{ message }}
@@ -23,21 +11,24 @@
   </button>
     </div>
 {% endfor %}
-<h1> Log In</h1>
-<form action="" method="post">
-  {% csrf_token %}    
-    
-    {% for field in form %}
-    <div class="mb-3 row">
-      <label for="" class="col-sm-2 col-form-label">{{ field.label_tag }}</label>
-      
-      <div class="col-sm-10">
-        {{ field }}
+<div class = "container">
+  <h1> Log In</h1>
+    <form action="" method="post">
+      {% csrf_token %}    
+        
+        {% for field in form %}
+        <div class="mb-3 row">
+          <p for="" class="col-sm-2 col-form-label">{{ field.label_tag }}</p>
+          
+          <div class="col-sm-10">
+            {{ field }}
+          </div>
       </div>
-  </div>
-  {% endfor %}
-  <button type = "submit">Log In</button>
-</form>
+      {% endfor %}
+      <button type = "submit" class="btn btn-primary" >Log In</button>
+    </form>
+</div>
+</div>
 {% endblock %}
 </Body>
 </html>
